# radCAD

./: .coveragerc  .gitignore  .travis.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  benchmark.ipynb  benchmark.py  index.html  mkdocs.yml  notebook.ipynb  noxfile.py  pdm.toml  pyproject.toml  pytest.ini  requirements.txt  scratchpad.rs  shell.nix
.github/workflows/: docs.yml  python.yml
benchmarks/: benchmark.py  benchmark_cadcad_comparison.py  benchmark_deepcopy.py  benchmark_memory_cadcad.py  benchmark_memory_radcad.py  benchmark_radcad.py  benchmark_single_process.py  benchmark_speed_test.py  benchmark_test.py  long_running_test.py
cluster/aws/: full.yaml  minimal.yaml
core/: Cargo.toml  Makefile  requirements.txt  shell.nix
core/src/: lib.rs
core/tests/: integration_test.rs
docs/: about.md  advanced_features.md  cadcad_compatibility.md  contributing.md  development.md  examples.md  examples_accessible.md  faq_and_troubleshooting.md  features.md  gettingstarted.md  index.md  mathjax.js  model_architecture.md  reference.md
docs/explanation/: architecture.md  dynamical-systems.md  index.md  radcad-and-cadcad.md  state-mutation-and-performance.md
docs/how-to/: ab-testing.md  choose-a-backend.md  handle-exceptions.md  improve-performance.md  index.md  iterate-over-a-model.md  migrate-from-cadcad.md  monte-carlo.md  parameter-sweeps.md  run-on-a-ray-cluster.md  use-dataclass-parameters.md  use-hooks.md
docs/radcad/: core.html  engine.html  index.html  utils.html  wrappers.html
docs/radcad/backends/: index.html  multiprocessing.html  pathos.html  single_process.html
docs/radcad/compat/: index.html
docs/radcad/compat/cadCAD/: index.html
docs/radcad/compat/cadCAD/configuration/: index.html
docs/radcad/compat/cadCAD/configuration/utils/: index.html
docs/radcad/compat/cadCAD/engine/: index.html
docs/radcad/extensions/: index.html
docs/radcad/extensions/backends/: index.html  ray.html
docs/reference/: api.md  data-structures.md  engine-settings.md  glossary.md  index.md
docs/tutorials/: first-model.md  index.md  installation.md
examples/: README.md  game-of-life.ipynb  predator-prey.ipynb
examples/game-of-life/: game-of-life.ipynb  game_of_life.py
examples/iterable_models/: iterable-models.ipynb
examples/predator-prey-abm/model/: state_update_blocks.py  sys_params.py
examples/predator_prey_abm/: predator-prey-abm.ipynb
examples/predator_prey_abm/model/: state_update_blocks.py  state_variables.py
examples/predator_prey_abm/model/parts/: agents.py  environment.py  utils.py
examples/predator_prey_sd/: predator-prey-sd.ipynb  predator-prey-sd.py
examples/streamlit/game_of_life/: app.py  requirements.txt
radcad/: __init__.py  _core.py  core.py  engine.py  experiment.py  simulation.py  types.py  utils.py  wrappers.py
radcad/backends/: __init__.py  multiprocessing.py  pathos.py  single_process.py
radcad/compat/cadCAD/: __init__.py
radcad/compat/cadCAD/configuration/: __init__.py
radcad/compat/cadCAD/configuration/utils/: __init__.py
radcad/compat/cadCAD/engine/: __init__.py
radcad/extensions/backends/: ray.py
scratchpad/: scratchpad.ipynb
src/: lib.rs
src/.ipynb_checkpoints/: lib-checkpoint.rs
tests/: benchmark_speed_test.py  benchmark_test.py  integration_test.py  long_running_test.py  test_HDF5.py  test_backend.py  test_base_wrapper.py  test_cadcad.py  test_compat_cadcad.py  test_core.py  test_dataclass_params.py  test_drop_substeps.py  test_engine.py  test_errors.py  test_examples.py  test_executable_class.py  test_experiment.py  test_hooks.py  test_initial_state.py  test_iterable_model.py  test_model.py  test_mutability.py  test_predator_prey.py  test_radcad.py  test_ray_remote.py  test_regression.py  test_reproducibility.py  test_simulation.py  test_state_history.py  test_state_update.py  test_state_update_block.py  test_timesteps_substeps.py  test_utils.py
tests/test_cases/: basic.py  benchmark_model.py  predator_prey_model.py
tests/test_cases/predator_prey_model_source/: run.py  state_update_blocks.py  state_variables.py  sys_params.py
tests/test_cases/predator_prey_model_source/parts/: agents.py  environment.py
