[package]
name = "rad-cad"
version = "0.1.0"
edition = "2018"

[lib]
name = "rad_cad"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
rayon = "1.1"
num = "0.2.1"
#rustpython-vm = "0.1.2"
#rustpython-compiler = "0.1.2"
#inline-python = "0.6.0"
#pyo3 = "0.12.1"
