[tool.poetry]
name = "radcad"
version = "0.13.0"
description = "A Python package for dynamical systems modelling & simulation, inspired by and compatible with cadCAD"
authors = ["CADLabs <benschza@users.noreply.github.com>"]
packages = [
    { include = "radcad" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pathos = "^0.2.7"
pandas = "^1.0.0"
cadCAD = { version = "^0.4.27", optional = true }
ray = { version = "^1.1.0", optional = true }
boto3 = { version = "^1.16.43", optional = true }
py = "^1.11.0"
numpy = "^1.24.1"
fn-py = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
coveralls = "^2.2.0"
pytest-cov = "^2.10.1"
pytest-benchmark = "^3.2.3"
matplotlib = "^3.3.3"
plotly = "^4.14.1"
ipykernel = "^6.14"
celluloid = "^0.2.0"
ipywidgets = ">=7.5"
memory-profiler = "^0.58.0"
black = "^20.8b1"
pytest-monitor = "^1.5.0"
tables = "^3.6.1"
jupyter = "^1.0.0"
pdoc3 = "^0.9.2"
jupyterlab = "^3.0.16"
jupyter-console = "^6.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
compat = ["cadCAD"]
extension-backend-ray = ["ray", "boto3"]
