[project]
name = "radcad"
version = "0.14.0"
description = "A Python framework for designing, testing, and validating complex systems through modelling and simulation."
authors = [
    {name = "CADLabs", email = "benschza@users.noreply.github.com"},
]
requires-python = ">=3.8, <3.13"
dependencies = [
    "pathos<1.0.0,>=0.2.7",
    "pandas<=2.0.3; python_version < '3.9'",
    "pandas>2.0.3; python_version >= '3.9'",
    "py<2.0.0,>=1.11.0",
    "numpy<1.25; python_version < '3.9'",
    "numpy<1.26.4,>=1.25; python_version >= '3.9'",
    "fn-py<1.0.0,>=0.6.0",
]

[project.optional-dependencies]
compat = [
    "cadCAD<0.5.0; python_version < '3.9'",
    "cadCAD>=0.5.0; python_version >= '3.9'",
]
extension-backend-ray = [
    "ray<3.0.0,>=2.0.0",
    "boto3<2.0.0,>=1.16.43",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest==8.3.2",
    "coveralls<3.0.0,>=2.2.0",
    "pytest-cov<3.0.0,>=2.10.1",
    "pytest-benchmark==4.0.0",
    "matplotlib<3.8.0; python_version < '3.9'",
    "matplotlib>=3.8.0; python_version >= '3.9'",
    "plotly<5.0.0,>=4.14.1",
    "ipykernel<7.0,>=6.14",
    "celluloid<1.0.0,>=0.2.0",
    "ipywidgets>=7.5",
    "memory-profiler<1.0.0,>=0.58.0",
    "black<21.0,>=20.8b1",
    "tables<=3.8.0; python_version < '3.9'",
    "tables>3.8.0; python_version >= '3.9'",
    "jupyter<2.0.0,>=1.0.0",
    "pdoc3<1.0.0,>=0.9.2",
    "jupyterlab<4.0.0,>=3.0.16",
    "jupyter-console<7.0.0,>=6.6.3",
]

[tool.pdm.build]
includes = ["radcad"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
