[package]
name = "radCAD-core"
version = "0.1.2"
edition = "2018"
authors = ["Benjamin Scholtz"]
license-file = "./LICENSE"
description = "A Rust cadCAD implementation, for dynamical systems modelling & simulation"
homepage = "https://github.com/BenSchZA/radCAD"
documentation = "https://github.com/BenSchZA/radCAD/blob/master/README.md"
repository = "https://github.com/BenSchZA/radCAD.git"
keywords = ["simulation", "modelling", "dynamical-systems", "cad"]
categories = ["tools"]

[package.metadata.maturin]
classifier = ["Programming Language :: Python"]

[lib]
name = "radCAD"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

#[dependencies.pyo3]
#git = "https://github.com/PyO3/pyo3.git"
#branch = "experimental-api"
#features = ["extension-module"]

[dependencies]
rayon = "1.1"
num = "0.2.1"
log = "0.4.11"
pyo3-log = "0.2.2"
#rustpython-vm = "0.1.2"
#rustpython-compiler = "0.1.2"
#inline-python = "0.6.0"
#pyo3 = "0.12.1"
